# wearables-data-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: pull_request_template.md
app/: App.tsx  README.md  app.config.ts  app.json  css.d.ts  package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 29842303d8f5_users_aggregator_environment_column.py  29842303d8f5_users_junction_environment_column.py  57535acfa22d_initial_schema_users_connections_.py  da0e1838c3e0_users_guest_token_hash.py  e3f27e56e96b_device_events_lifecycle_ledger.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: deps.py  webhooks.py
backend/app/api/v1/: devices.py  events.py  stream.py  timeseries.py  users.py
backend/app/core/: clerk.py  config.py  logging.py
backend/app/db/: session.py
backend/app/services/: activity.py  aggregator.py  demo_seed.py  events.py  ingestion.py  junction.py  ledger.py  timeseries.py
backend/app/workers/: queue.py  worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_clerk_auth.py  test_erasure.py  test_events.py  test_guest_auth.py  test_lifecycle.py  test_sleep_flow.py  test_stream.py  test_webhook_flow.py
backend/tests/unit/: test_ingestion.py  test_webhook_signature.py
docs/: architecture.md  authentication.md  demo-runbook.md  ideal-architecture.drawio  insights.md  presentation.md  (+3 more)
(+78 files in other folders)
